--- a/config.json
+++ b/config.json
@@ -76,6 +76,31 @@
     "ikun": {
       "api": "https://ikunzyapi.com/api.php/provide/vod",
       "name": "iKun资源"
-    }
-  }
-}
+    },
+    "subo": {
+      "api": "https://subocj.com/api.php/provide/vod",
+      "name": "速播资源"
+    },
+    "豪华": {
+      "api": "https://hhzyapi.com/api.php/provide/vod",
+      "name": "豪华资源"
+    },
+    "快播": {
+      "api": "https://gayapi.com/api.php/provide/vod",
+      "name": "快播资源"
+    },
+    "豆瓣": {
+      "api": "https://caiji.dbzy5.com/api.php/provide/vod",
+      "name": "豆瓣资源"
+    },
+    "豆瓣": {
+      "api": "https://caiji.dbzy5.com/api.php/provide/vod",
+      "name": "豆瓣资源"
+    },
+    "茅台": {
+      "api": "https://caiji.maotaizy.cc/api.php/provide/vod",
+      "name": "茅台资源"
+     },
+    "杏吧": {
+      "api": "https://xingba222.com/api.php/provide/vod",
+      "name": "杏吧资源"
